infrastructure/network-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: CloudMart VPC, subnets, routing and security groups

Resources:

  # --------------------------------------------------
  # VPC
  # --------------------------------------------------

  CloudMartVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: cloudmart-vpc


  # --------------------------------------------------
  # INTERNET GATEWAY
  # --------------------------------------------------

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: cloudmart-igw

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref CloudMartVPC
      InternetGatewayId: !Ref InternetGateway


  # --------------------------------------------------
  # PUBLIC SUBNET
  # --------------------------------------------------

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CloudMartVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: cloudmart-public-subnet


  # --------------------------------------------------
  # PRIVATE SUBNET
  # --------------------------------------------------

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref CloudMartVPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: cloudmart-private-subnet


  # --------------------------------------------------
  # PUBLIC ROUTE TABLE
  # --------------------------------------------------

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CloudMartVPC
      Tags:
        - Key: Name
          Value: cloudmart-public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable


  # --------------------------------------------------
  # PRIVATE ROUTE TABLE
  # --------------------------------------------------

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref CloudMartVPC
      Tags:
        - Key: Name
          Value: cloudmart-private-rt

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable


  # --------------------------------------------------
  # LAMBDA SECURITY GROUP
  # --------------------------------------------------

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for CloudMart Lambda functions
      VpcId: !Ref CloudMartVPC
      Tags:
        - Key: Name
          Value: cloudmart-lambda-sg


  # --------------------------------------------------
  # RDS SECURITY GROUP
  # --------------------------------------------------

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for CloudMart RDS MySQL
      VpcId: !Ref CloudMartVPC

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref LambdaSecurityGroup

      Tags:
        - Key: Name
          Value: cloudmart-rds-sg


# --------------------------------------------------
# OUTPUTS
# --------------------------------------------------

Outputs:

  VPCId:
    Description: CloudMart VPC ID
    Value: !Ref CloudMartVPC
    Export:
      Name: CloudMart-VPC-ID

  PublicSubnetId:
    Description: CloudMart public subnet ID
    Value: !Ref PublicSubnet
    Export:
      Name: CloudMart-Public-Subnet-ID

  PrivateSubnetId:
    Description: CloudMart private subnet ID
    Value: !Ref PrivateSubnet
    Export:
      Name: CloudMart-Private-Subnet-ID

  LambdaSecurityGroupId:
    Description: Lambda security group ID
    Value: !Ref LambdaSecurityGroup
    Export:
      Name: CloudMart-Lambda-SG-ID

  RDSSecurityGroupId:
    Description: RDS security group ID
    Value: !Ref RDSSecurityGroup
    Export:
      Name: CloudMart-RDS-SG-ID
